--- a/app/globals.css
+++ b/app/globals.css
@@ -2,11 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 @layer base {
+  html {
+    @apply bg-gray-900;
+  }
+
+  body {
+    @apply bg-gray-900 text-white;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply text-white;
+  }
+
+  p {
+    @apply text-gray-300;
+  }
+
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
